# intenttext-desktop

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release-installers.yml
scripts/: sync-icons.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: fs.rs  index.rs  mod.rs  vault.rs  workspace.rs
src/editor/: MonacoEditor.tsx  completion.ts  hover.ts  language.ts  theme.ts
src/hooks/: useAutoSave.ts  useDocument.ts  useFile.ts  useTrustState.ts  useWorkspace.ts
src/modals/: AmendModal.tsx  ConvertModal.tsx  HelpOverlay.tsx  HistoryModal.tsx  SealModal.tsx  VerifyModal.tsx
src/preview/: Preview.tsx
src/showcase/: FirstRunGuide.tsx  SearchShowcasePanel.tsx  TrustShowcasePanel.tsx  WorkflowShowcasePanel.tsx
src/sidebar/: DeadlinesPanel.tsx  ExplorerPanel.tsx  HistoryPanel.tsx  QueryPanel.tsx  SearchPanel.tsx  Sidebar.tsx
src/status/: StatusBar.tsx
src/styles/: global.css  visual.css
src/toolbar/: ExportMenu.tsx  ThemePicker.tsx  Toolbar.tsx  ToolsMenu.tsx  TrustMenu.tsx
src/visual/: BlockPicker.tsx  VisualEditor.tsx  parser-bridge.ts  serializer.ts
src/visual/blocks/: BlockTag.tsx
