[package]
name = "intenttext-desktop"
version = "1.0.0"
description = "Dotit Desktop — native .it document editor"
authors = ["Dotit Labs"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-window-state = "2"
notify = { version = "7", features = ["macos_fsevent"] }
walkdir = "2"
trash = "5"
grep-regex = "0.1"
grep-searcher = "0.1"
intenttext = { path = "../../intenttext-rust" }
dirs = "6"
